--- a/style.css
+++ b/style.css
@@ -41,25 +41,25 @@ body {
   }
   
   table th {
-    background-color: #f9f9f9;
+    background-color: #003cff;
   }
   
   button {
-    background-color: #28a745;
+    background-color: #101bf8;
     color: #fff;
     border: none;
     cursor: pointer;
   }
   
   button:hover {
-    background-color: #218838;
+    background-color: #1509c4;
   }
   
   button.withdraw {
-    background-color: #dc3545;
+    background-color: #2711d1;
   }
   
   button.withdraw:hover {
-    background-color: #c82333;
+    background-color: #0b05b9;
   }
   
